config/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: eg
  namespace: aibrix-system
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: eg
  namespace: aibrix-system
spec:
  gatewayClassName: aibrix-eg
  listeners:
    - name: http
      protocol: HTTP
      port: 80   
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: aibrix-custom-proxy-config
# ---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: EnvoyProxy
# metadata:
#   name: custom-proxy-config
#   namespace: aibrix-system
# spec:
#   provider:
#     type: Kubernetes
#     kubernetes:
#       envoyDeployment:
#         container:
#           resources:
#             requests:
#               cpu: 2
#               memory: 8Gi
#             limits:
#               cpu: 2
#               memory: 8Gi
#       envoyService:
#         patch:
#           value:
#             spec:
#               ipFamilies:
#               - IPv4    # Only IPv4
#               ipFamilyPolicy: SingleStack  # Changed from PreferDualStack to SingleStack
